--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/lucamarchi/todolist#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongodb": "^3.1.1"
+    "mongoose": "^5.2.5",
+    "morgan": "^1.9.0"
   }
 }
